force-app/main/default/objects/tc9_pr__Suspension__c/tc9_pr__Suspension__c.object-meta.xml
<CustomObject>
    <description>Suspension details</description>
    <label>Suspension</label>
    <nameField>
        <displayFormat>SUS-{0000000000}</displayFormat>
        <label>Suspension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>