force-app/main/default/objects/tc9_pr__Suspension__c/fields/tc9_pr__Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Comments__c</fullName>
    <description>User entered comments regarding this Suspension record.</description>
    <inlineHelpText>User entered comments regarding this Suspension record.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>