force-app/main/default/objects/tc9_pr__Suspension__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The effective date of this suspension record.</description>
    <inlineHelpText>The effective date of this suspension record.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>