force-app/main/default/objects/tc9_pr__Suspension__c/fields/tc9_pr__Exclude_From_Auto_Update__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Auto_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this record will be skipped by the Automatic Status Update scheduled job.</description>
    <inlineHelpText>Indicates that this record will be skipped by the Automatic Status Update scheduled job.</inlineHelpText>
    <label>Exclude From Auto Update</label>
    <type>Checkbox</type>
</CustomField>