force-app/main/default/objects/tc9_pr__Suspension__c/fields/tc9_pr__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expiry_Date__c</fullName>
    <description>The expiry date of this suspension record.</description>
    <inlineHelpText>The expiry date of this suspension record.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>