force-app/main/default/objects/tc9_pr__Suspension__c/fields/tc9_pr__Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee Leave Rule.</description>
    <inlineHelpText>The related Payee Leave Rule.</inlineHelpText>
    <label>Payee Leave Rule</label>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Suspensions</relationshipLabel>
    <relationshipName>Suspensions</relationshipName>
    <type>Lookup</type>
</CustomField>