force-app/main/default/objects/tc9_pr__Suspension__c/recordTypes/tc9_pr__Payee_Leave_Rule.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payee_Leave_Rule</fullName>
    <active>true</active>
    <description>Suspension related to a Payee Leave Rule</description>
    <label>Payee Leave Rule</label>
</RecordType>